crates/oxidoc/tests/snapshots/golden_writer__native__figure__figure-captioned.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Figure
    ( "" , [] , [] )
    (Caption
       Nothing [ Plain [ Str "a" , Space , Str "caption" ] ])
    [ Plain
        [ Image
            ( "" , [] , [] )
            [ Str "a" , Space , Str "caption" ]
            ( "pic.png" , "fig title" )
        ]
    ]
]
