crates/oxidoc/tests/snapshots/golden_writer__native__figure__figure-with-dims.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Figure
    ( "" , [] , [] )
    (Caption
       Nothing [ Plain [ Str "alt" , Space , Str "text" ] ])
    [ Plain
        [ Image
            ( "" , [] , [ ( "width" , "200" ) ] )
            [ Str "alt" , Space , Str "text" ]
            ( "pic.png" , "t" )
        ]
    ]
]
